--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 body {
     font-family: "Raleway", sans-serif;
     font-size: 14px;
-    font-weight: 700;
+    font-weight: 400;
     color: #6c7279;
     -webkit-font-smooth: antialiased;
     background-color: #fff;
@@ -117,7 +117,6 @@ body {
     font-size: 22px;
     color: #fff;
     line-height: 1.5;
-    font-weight: 400;
 }
 
 /* Button ========================================== */
@@ -186,4 +185,67 @@ body {
     font-size: 14px;
     line-height: 1.5;
     color: #6c7279;
+}
+
+/* Works =========================================== */
+
+.works {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.works__item {
+    flex: 0 1 25%;
+    height: 350px;
+
+    border-bottom: 1px solid #fff;
+    border-right: 1px solid #fff;
+
+    position: relative;
+    overflow: hidden;
+}
+
+.works__item:hover .works__content {
+    opacity: 1;
+}
+
+.works__image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+
+    transform: translate3d(-50%, -50%, 0);
+}
+
+.works__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(232, 69, 69, 0.9);
+    opacity: 0;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+
+    transition: opacity 0.2s linear;
+}
+
+.works__title {
+    margin-bottom: 5px;
+    font-size: 14px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.works__text {
+    font-size: 14px;
+    color: #fff;
 }
