--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,12 @@ body {
     line-height: 1.5;
 }
 
+@media (max-width: 1200px) {
+    .intro__title {
+        font-size: 40px;
+    }
+}
+
 /* Button ========================================== */
 
 .btn {
@@ -491,4 +497,84 @@ body {
 
 .copyright__text span {
     color: #fff;
+}
+
+/* Media ========================================== */
+
+.burger {
+    display: none;
+    padding: 9px 2px;
+    background: none;
+    border: 0;
+    cursor: pointer;
+}
+
+.burger__item {
+    display: block;
+    width: 30px;
+    height: 3px;
+    background-color: #fff;
+    font-size: 0;
+    color: transparent;
+    position: relative;
+}
+
+.burger__item::before,
+.burger__item::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    position: absolute;
+    left: 0;
+    z-index: 1;
+}
+
+.burger__item::before {
+    top: -8px;
+}
+
+.burger__item::after {
+    bottom: -8px;
+}
+
+/* Media ========================================== */
+
+@media (max-width: 1200px) {
+
+    /* Intro */
+    .intro__title {
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 991.98px) {
+    .nav {
+        display: none;
+    }
+
+    .burger {
+        display: block;
+    }
+
+    .intro__title {
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 766.98px) {
+    .intro {
+        height: auto;
+        padding-top: 130px;
+        padding-bottom: 40px;
+    }
+
+    .intro__title {
+        font-size: 30px;
+    }
+
+    .intro__subtitle {
+        margin-bottom: 30px;
+        font-size: 16px;
+    }
 }
