--- a/css/style.css
+++ b/css/style.css
@@ -119,12 +119,6 @@ body {
     line-height: 1.5;
 }
 
-@media (max-width: 1200px) {
-    .intro__title {
-        font-size: 40px;
-    }
-}
-
 /* Button ========================================== */
 
 .btn {
@@ -173,7 +167,7 @@ body {
 }
 
 .features__column {
-    flex: 0 1 33.333%;
+    width: 33%;
 }
 
 .features__item {
@@ -223,6 +217,7 @@ body {
 }
 
 .works__image {
+    min-width: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -456,7 +451,6 @@ body {
 
 .footer__block {
     flex: 0 1 33.333%;
-    /* padding: 0 15px; */
     text-align: center;
 }
 
@@ -540,6 +534,12 @@ body {
 
 /* Media ========================================== */
 
+@media (max-width: 1300px) {
+    .works__item {
+        flex: 0 1 50%;
+    }
+}
+
 @media (max-width: 1200px) {
 
     /* Intro */
@@ -560,13 +560,49 @@ body {
     .intro__title {
         font-size: 40px;
     }
+
+    .features__column {
+        flex: 0 1 50%;
+    }
+
+    .features__item {
+        margin: 30px 0;
+    }
+
+    .team__item {
+        flex: 0 1 50%;
+        text-align: center;
+    }
+
+    .team__photo {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .social {
+        justify-content: center;
+    }
+
+    .reviews__photo {
+        width: 100%;
+        margin: 15px 0 40px;
+        overflow: hidden;
+    }
+
+    .reviews__content {
+        width: 100%;
+        padding-left: 0;
+        padding-bottom: 40px;
+    }
+
+    .reviews__image {}
 }
 
 @media (max-width: 766.98px) {
     .intro {
-        height: auto;
+        max-height: 500px;
         padding-top: 130px;
-        padding-bottom: 40px;
+        padding-bottom: 70px;
     }
 
     .intro__title {
@@ -574,7 +610,73 @@ body {
     }
 
     .intro__subtitle {
-        margin-bottom: 30px;
+        margin-bottom: 40px;
         font-size: 16px;
+    }
+
+    .features {
+        margin: 30px 0;
+    }
+
+    .features__column {
+        flex: 0 1 100%;
+    }
+
+    .features__item {
+        padding: 0;
+    }
+
+    .works__item {
+        flex: 0 1 100%;
+        height: 300px;
+    }
+
+    .team {
+        /* margin: 60px 0 30px; */
+    }
+
+    .team__item {
+        flex: 0 1 100%;
+    }
+
+    .team__text {
+        margin-bottom: 30px;
+    }
+
+    .reviews__text {
+        font-size: 25px;
+    }
+
+    .btn_long {
+        min-width: 260px;
+    }
+
+    .download {
+        margin: 50px 0;
+    }
+
+    .download__title {
+        font-size: 24px;
+    }
+
+    .footer__inner {
+        padding: 30px 0;
+    }
+
+    .footer__block {
+        flex: 0 1 1003%;
+        padding-left: 0;
+        padding-right: 0;
+        margin-bottom: 30px;
+    }
+
+    .footer__block:last-child {
+        margin-bottom: 0;
+    }
+}
+
+@media (max-width: 414px) {
+    .reviews__image {
+        right: -100px;
     }
 }
