--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,17 @@ body {
     z-index: 1000;
 }
 
+.header.fixed {
+    position: fixed;
+    background-color: #31344e;
+    height: auto;
+}
+
+.header.fixed .header__inner {
+    padding: 15px 0;
+    border-bottom: 0;
+}
+
 .header__container {}
 
 .header__inner {
@@ -366,11 +377,21 @@ body {
     overflow: hidden;
 }
 
+.reviews__slider {
+    height: 500px;
+    overflow: hidden;
+}
+
+.reviews__slider.slick-initialized {
+    height: auto;
+}
+
 .reviews__container {}
 
 .reviews__item {
     display: flex;
     flex-wrap: wrap;
+    overflow: hidden;
 }
 
 .reviews__photo {
@@ -409,6 +430,45 @@ body {
     font-weight: 700;
     text-transform: uppercase;
     color: #fff;
+}
+
+.slick-dots {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0 0 60px;
+    width: 50%;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+}
+
+.slick-dots li {
+    margin: 0 5px;
+}
+
+.slick-dots button {
+    width: 12px;
+    height: 12px;
+    padding: 0;
+
+    background: #fff;
+    border-radius: 50%;
+    border: 0;
+    opacity: 0.5;
+    cursor: pointer;
+
+    font-size: 0;
+    color: transparent;
+}
+
+.slick-dots button:focus {
+    outline: 0;
+}
+
+.slick-dots .slick-active button {
+    opacity: 1;
 }
 
 /* Download ========================================= */
@@ -549,8 +609,34 @@ body {
 }
 
 @media (max-width: 991.98px) {
+    .header.show {
+        background-color: #31344e;
+    }
+
     .nav {
         display: none;
+        width: 100%;
+        flex-direction: column;
+        text-align: center;
+        position: absolute;
+        right: 0;
+        top: 100%;
+        background-color: #31344e;
+    }
+
+    .nav.show {
+        display: flex;
+        height: 100vh;
+    }
+
+    .nav__link {
+        font-size: 20px;
+        padding: 20px 0;
+        margin-left: 0;
+    }
+
+    .nav__link:hover {
+        text-decoration: underline;
     }
 
     .burger {
@@ -596,6 +682,11 @@ body {
     }
 
     .reviews__image {}
+
+    .slick-dots {
+        width: 100%;
+        padding: 0 0 15px;
+    }
 }
 
 @media (max-width: 766.98px) {
@@ -645,6 +736,11 @@ body {
 
     .reviews__text {
         font-size: 25px;
+    }
+
+    .slick-dots {
+        width: 100%;
+        /* padding: 0 0 20px; */
     }
 
     .btn_long {
